--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/djsharman/statejs#readme",
   "dependencies": {
+    "capitalize": "^2.0.1",
     "ejs": "^3.0.1",
     "xml-query": "^1.5.0",
     "xml-reader": "^2.4.3",
