--- a/package.json
+++ b/package.json
@@ -28,20 +28,19 @@
   },
   "homepage": "https://github.com/djsharman/statejs#readme",
   "dependencies": {
-    "@babel/plugin-transform-spread": "^7.8.0",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.6",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-node6": "^11.0.0",
     "capitalize": "^2.0.1",
     "ejs": "^3.0.1",
+    "jest": "^24.9.0",
     "xml-query": "^1.5.0",
-    "xml-reader": "^2.4.3",
-    "xmldom": "^0.2.1"
-  },
-  "devDependencies": {
-    "babel-preset-env": "^1.6.1",
-    "babel-register": "^6.26.0"
+    "xml-reader": "^2.4.3"
   },
   "babel": {
     "presets": [
-      "env"
+      "es2015"
     ],
     "sourceMaps": true,
     "retainLines": true
