--- a/package.json
+++ b/package.json
@@ -1,48 +1,48 @@
 {
-  "name": "statejs",
-  "version": "1.0.0",
-  "description": "Elegantly implemented finite state machine generator for JavaScript",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "test": ""
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/djsharman/statejs.git"
-  },
-  "keywords": [
-    "FSM",
-    "finite",
-    "state",
-    "machine",
-    "generator",
-    "Javascript"
-  ],
-  "author": "Darren Sharman",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/djsharman/statejs/issues"
-  },
-  "homepage": "https://github.com/djsharman/statejs#readme",
-  "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.6",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-node6": "^11.0.0",
-    "capitalize": "^2.0.1",
-    "ejs": "^3.0.1",
-    "jest": "^24.9.0",
-    "xml-query": "^1.5.0",
-    "xml-reader": "^2.4.3"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ],
-    "sourceMaps": true,
-    "retainLines": true
-  }
+	"name": "statejs-fsm",
+	"version": "1.0.0",
+	"description": "Elegantly implemented finite state machine generator for JavaScript",
+	"main": "index.js",
+	"directories": {
+		"test": "test"
+	},
+	"scripts": {
+		"test": ""
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/djsharman/statejs.git"
+	},
+	"keywords": [
+		"FSM",
+		"finite",
+		"state",
+		"machine",
+		"generator",
+		"Javascript"
+	],
+	"author": "Darren Sharman",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/djsharman/statejs/issues"
+	},
+	"homepage": "https://github.com/djsharman/statejs#readme",
+	"dependencies": {
+		"babel-cli": "^6.26.0",
+		"babel-eslint": "^8.2.6",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-node6": "^11.0.0",
+		"capitalize": "^2.0.1",
+		"ejs": "^3.0.1",
+		"jest": "^24.9.0",
+		"xml-query": "^1.5.0",
+		"xml-reader": "^2.4.3"
+	},
+	"babel": {
+		"presets": [
+			"es2015"
+		],
+		"sourceMaps": true,
+		"retainLines": true
+	}
 }
